# practice_repo

./: README.md
Daniel/: Daniel.md  funny.sh
Jordan/: Jordan.md
Noah_Bash/: noah_linux_mod.sh
Trevor/: demo_mod.sh  linux_mod.sh  trevor.md
modules/bash_and_linux/: populate.sh
modules/cpp/: CMakeLists.txt
modules/cpp/include/: main.h
modules/cpp/src/: bug  main.cpp  no_header.cpp
